--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -46,7 +46,7 @@
 
   <!--div id='map' style='width: 100%; height: 600px;'></div-->
   <div class="map" id='map' style='width: 100%; height: 600px;'>
-    <%= render 'maps' %>
+    <%= render 'maps', papuas_results: @papuas, papuas_other: @papuas_other %>
   </div>
 
 
