--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,6 +1,13 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (October 22nd, 2021):</p>
+		<ul class="list-inside list-disc">
+	  	<li>New feature: Added map to Segment show page.</li>
+	  	<li></li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (October 21st, 2021):</p>
 		<ul class="list-inside list-disc">
 	  	<li>New feature: Text columns are sortable alphabetically, numberic columns are sortable in ascending and descending order.</li>
