--- a/app/views/segments/show.html.erb
+++ b/app/views/segments/show.html.erb
@@ -28,6 +28,10 @@
 <%= link_to 'Edit', edit_segment_path(@segment) %> |
 <%= link_to 'Back', segments_path %>
 
+<div class="map" id='map' style='width: 100%; height: 600px;'>
+  <%= render 'papuas/maps', papuas_results: @papuas, papuas_other: @papuas_other %>
+</div>
+
 
 <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
     <div id="page_entries_info"><%= render 'papuas/page_entries_info' %></div>
