Fixed normal full text search function

--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -4,7 +4,7 @@
 		<p class="my-2">New in (October 22nd, 2021):</p>
 		<ul class="list-inside list-disc">
 	  	<li>New feature: Added map to Segment show page.</li>
-	  	<li></li>
+	  	<li>Fixed normal full text search function.</li>
 		</ul>
 	</div>
 	<div class="update my-10">
