update what'new page

--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -3,8 +3,10 @@
 	<div class="update my-10">
 		<p class="my-2">New in (October 22nd, 2021):</p>
 		<ul class="list-inside list-disc">
+			<li>New feature: Display search query on page.</li>
 	  	<li>New feature: Added map to Segment show page.</li>
 	  	<li>Fixed normal full text search function.</li>
+	  	<li>Changed /Ø/ to /ø/: Skou and Yaqay.</li>
 		</ul>
 	</div>
 	<div class="update my-10">
