--- a/app/views/papuas/_page_entries_info.html.erb
+++ b/app/views/papuas/_page_entries_info.html.erb
@@ -15,9 +15,9 @@
               <span class="font-medium"> <%#= @papuas_page.total_count %> </span-->
               
             <%# end %> 
-            <span class="font-semibold text-lg"> <%= @papuas.size %> </span>
+            <span class="font-semibold text-lg"> <%= papuas.size %> </span>
               results and rest 
-            <span class="font-semibold text-lg"> <%= @papuas_other.size %> </span>
+            <span class="font-semibold text-lg"> <%= papuas_other.size %> </span>
               languages in blue rows
           </p>
     </div>
