--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -31,7 +31,7 @@
     <%# end %>
   </div>
 
-  <div class="flex justify-center space-x-4 text-lg font-medium text-gray-900">
+  <!-- <div class="flex justify-center space-x-4 text-lg font-medium text-gray-900">
     <div>
       <p>
         Results: <%= @papuas_results.size %>
@@ -42,7 +42,7 @@
         Total: <%= @papuas_all_size %>
       </p>
     </div>
-  </div>
+  </div> -->
 
   <!--div id='map' style='width: 100%; height: 600px;'></div-->
   <div class="map" id='map' style='width: 100%; height: 600px;'>
@@ -56,49 +56,50 @@
 
   </div>
 
-  <!--div class="py-3" id='map' style='width: 1000px; height: 600px;'></div-->
-  <%#= text_field_tag :search_inc, params[:search_inc] %>
-  <!--input type="text" id="search_c" name="search_c"-->
 
   <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
-    <div id="page_entries_info"><%= render 'page_entries_info' %></div>
+    <div id="page_entries_info">
+      <%#= render 'page_entries_info', papuas: @search.papuas, papuas_other: @search.papuas_other %>
+    </div>
     <%= render 'shared/searchbar' %>
-    <!--div id="paginator"><%#= paginate @papuas, remote: true %></div-->
   </div>
 
   <!-- queries displayed and will be stored in a page -->
 
-  <div class="text-red-800 text-lg mb-5" id="search_history">
+  <!-- <div class="text-red-800 text-lg mb-5" id="search_history">
     <p>Search:</p>
     <ul>
-      <li>Language: <%= params[:search_language] %></li>      
-      <li>Language Family: <%= params[:search_family] %></li>
-      <li>ISO: <%= params[:search_iso] %></li>
-      <li>Country: <%= params[:search_country] %></li>
-      <li>Inventory: <%= params[:search_inv] %></li>
+      <li>Language: <%#= params[:search_language] %></li>      
+      <li>Language Family: <%#= params[:search_family] %></li>
+      <li>ISO: <%#= params[:search_iso] %></li>
+      <li>Country: <%#= params[:search_country] %></li>
+      <li>Inventory: <%#= params[:search_inv] %></li>
       <li>Consonant: 
-        <% if params[:search_c].present? %>
-          <%= compare_symbol(params[:select_c]) %> 
-          <%= params[:search_c] %>
-        <% end %>
+        <%# if params[:search_c].present? %>
+          <%#= compare_symbol(params[:select_c]) %> 
+          <%#= params[:search_c] %>
+        <%# end %>
       </li>
       <li>Vowel: 
-        <% if params[:search_v].present? %>
-          <%= compare_symbol(params[:select_v]) %> 
-          <%= params[:search_v] %>
-        <% end %>
+        <%# if params[:search_v].present? %>
+          <%#= compare_symbol(params[:select_v]) %> 
+          <%#= params[:search_v] %>
+        <%# end %>
         </li>
       <li>Total: 
-        <% if params[:search_cv].present? %>
-          <%= compare_symbol(params[:select_cv]) %> 
-          <%= params[:search_cv] %>
-        <% end %>  
+        <%# if params[:search_cv].present? %>
+          <%#= compare_symbol(params[:select_cv]) %> 
+          <%#= params[:search_cv] %>
+        <%# end %>  
       </li>
     </ul>
     <p class="text-blue-700">Result: <%= @papuas.size %>/<%= @papuas_all_size %> = <%= @result_ratio %>%</p>
-    <p class="text-blue-700">Time: <%= Time.now %></p>
+    <p class="text-blue-700">Time: <%#= Time.now %></p>
+  </div> -->
 
-  </div>
+  <!-- advanced search -->
+  <%= link_to "Advanced Search", new_search_path %>
+  <%#= render 'shared/advanced_search' %>
 
   <!-- result table   -->
   <%= render 'papuas', papuas: @papuas %>
