--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,9 +1,16 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (October 24th, 2021):</p>
+		<ul class="list-inside list-disc">
+		<li>Fixed all minus sound query.</li>
+	  	<li>Changed /kb/ to /kp/: Kube.</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (October 22nd, 2021):</p>
 		<ul class="list-inside list-disc">
-			<li>New feature: Display search query on page.</li>
+		<li>New feature: Display search query on page.</li>
 	  	<li>New feature: Added map to Segment show page.</li>
 	  	<li>Fixed normal full text search function.</li>
 	  	<li>Changed /Ø/ to /ø/: Skou and Yaqay.</li>
