advanced search and other functions

--- a/app/views/papuas/_papuas.html.erb
+++ b/app/views/papuas/_papuas.html.erb
@@ -40,7 +40,7 @@
               <p>Total</p>
             </th>
         </tr>
-        <tr>
+        <!-- <tr>
             <th scope="col" class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               
             </th>
@@ -62,8 +62,8 @@
             </th>
 
             <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              <!-- <input type="text" id="search_inv" name="search_inv" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-80"> -->
-              <%= text_field_tag :search_inv, params[:search_inv], class: "focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-80"%>
+              <input type="text" id="search_inv" name="search_inv" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-80">
+              <%#= text_field_tag :search_inv, params[:search_inv], class: "focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-80"%>
             </th>
 
             <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -110,7 +110,7 @@
                 <input type="text" id="search_cv" name="search_cv" class="focus:ring-indigo-500 focus:border-indigo-500 block sm:text-sm border-gray-300 rounded-none rounded-r-md w-14">
               </div>
             </th>
-        </tr>
+        </tr> -->
     </thead>
     <tbody class="bg-white divide-y divide-gray-200">
       <% papuas.each do |papua| %>
