--- a/app/views/papuas/new.html.erb
+++ b/app/views/papuas/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Papua</h1>
+<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">Creating <span class="px-1 py-2 inline-flex leading-5 font-semibold rounded-md bg-gray-200 text-gray-800">NO.<%= Papua.all.size + 1 %></span> Language</h1>
 
 <%= render 'form', papua: @papua %>
 
-<%= link_to 'Back', papuas_path %>
+<%#= link_to 'Back', papuas_path %>
