--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -15,7 +15,7 @@
 
             <a href="<%= segments_path %>" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium nav-btn">Segments</a>
 
-            <a href="<%= searches_path %>" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium nav-btn">Searches History</a>
+            <a href="<%= searches_path %>" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium nav-btn">Search History</a>
 
             <a href="<%= whatsnew_index_path %>" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">What's New</a>
 
