--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,9 +1,21 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (October 27th, 2021):</p>
+		<ul class="list-inside list-disc">
+		<li>New feature: Advanced search function at Papunesias' and Segments' show page.</li>
+		<li>New feature: Create new language function.</li>
+		<li>New feature: Download results into Excel file.</li>
+	  	<li>New page: Searches History for all created queries and results.</li>
+	  	<li>New fields: Area and Region of language.</li>
+	  	<li>Improve full text search algorithm.</li>
+	  	<li>Formatted Segment's Show and Edit page.</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (October 22nd, 2021):</p>
 		<ul class="list-inside list-disc">
-			<li>New feature: Display search query on page.</li>
+		<li>New feature: Display search query on page.</li>
 	  	<li>New feature: Added map to Segment show page.</li>
 	  	<li>Fixed normal full text search function.</li>
 	  	<li>Changed /Ø/ to /ø/: Skou and Yaqay.</li>
