--- a/app/views/papuas/_form.html.erb
+++ b/app/views/papuas/_form.html.erb
@@ -38,8 +38,18 @@
         </div>
 
         <div class="col-span-6 sm:col-span-3">
+          <%= form.label :area, "Area", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :area, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div>
+
+        <div class="col-span-6 sm:col-span-3">
           <%= form.label :country, "Country", class: "block text-sm font-medium text-gray-700" %>
           <%= form.text_field :country, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div>
+
+        <div class="col-span-6 sm:col-span-3">
+          <%= form.label :region, "Region", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :region, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
         </div>
 
         <div class="col-span-6 sm:col-span-6 lg:col-span-3">
