--- a/app/views/segments/_form.html.erb
+++ b/app/views/segments/_form.html.erb
@@ -11,32 +11,31 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :no %>
-    <%= form.number_field :no %>
+  <div class="mt-5 flex items-center justify-center">
+    <div class="shadow overflow-hidden sm:rounded-md w-1/3">
+      <div class="px-4 py-5 bg-white sm:p-6">
+        <div class="">
+          <%= form.label :ipa, "IPA", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :ipa, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div>
+        <div class="mt-2">
+          <%= form.label :sequence, "Sequence", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :sequence, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div>
+        <div class="mt-2">
+          <%= form.label :category, "Category", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :category, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div>
+        <div class="mt-2">
+          <%= form.label :place, "Place", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :place, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div>
+      </div>
+      <div class="actions px-4 py-3 bg-gray-50 text-right sm:px-6">
+      <%= link_to 'Back', segments_path, class: "inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+      <%= form.submit class: "btn inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ml-3" %>
+    </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :ipa %>
-    <%= form.text_field :ipa %>
-  </div>
-
-  <div class="field">
-    <%= form.label :sequence %>
-    <%= form.text_field :sequence %>
-  </div>
-
-  <div class="field">
-    <%= form.label :category %>
-    <%= form.text_field :category %>
-  </div>
-
-  <div class="field">
-    <%= form.label :place %>
-    <%= form.text_field :place %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
