--- a/app/views/segments/show.html.erb
+++ b/app/views/segments/show.html.erb
@@ -1,40 +1,85 @@
 <p id="notice"><%= notice %></p>
+<div class="bg-white shadow overflow-hidden sm:rounded-lg mt-5 mb-5">
+  <div class="lg:flex lg:items-center lg:justify-between">
+    <div class="flex-1 min-w-0 px-4 py-5 sm:px-6">
+      <h3 class="text-lg leading-6 font-medium text-gray-900">
+         <span class="px-1 py-1 inline-flex leading-5 font-semibold rounded-md bg-gray-200 text-gray-800">NO.<%= @segment.no %></span> Segment Information
+      </h3>
+    </div>
+    <div class="mt-5 flex lg:mt-0 lg:ml-4">
+      <% if current_user.admin? %>
+        <a href="<%= edit_segment_path(@segment) %>">
+          <span class="hidden sm:block">
+            <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <!-- Heroicon name: solid/pencil -->
+            <svg class="-ml-1 mr-2 h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+            </svg>
+            Edit
+            <%#= link_to 'Edit', edit_product_path(@product) %>
+            </button>  
+          </span>
+        </a>
+      <% end %>
+      <span class="hidden sm:block ml-3 mr-3">
+        <%= link_to 'Back', segments_path, class: "inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+      </span>
+    </div>
+  </div>
 
-<p>
-  <strong>No:</strong>
-  <%= @segment.no %>
-</p>
+  <div class="border-t border-gray-200">
+    <dl>
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          IPA
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @segment.ipa %>
+        </dd>
+      </div>
 
-<p>
-  <strong>Ipa:</strong>
-  <%= @segment.ipa %>
-</p>
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Sequence
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @segment.sequence %>
+        </dd>
+      </div>
 
-<p>
-  <strong>Sequence:</strong>
-  <%= @segment.sequence %>
-</p>
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Category
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @segment.category %>
+        </dd>
+      </div>
 
-<p>
-  <strong>Category:</strong>
-  <%= @segment.category %>
-</p>
-
-<p>
-  <strong>Place:</strong>
-  <%= @segment.place %>
-</p>
-
-<%= link_to 'Edit', edit_segment_path(@segment) %> |
-<%= link_to 'Back', segments_path %>
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Place
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @segment.place %>
+        </dd>
+      </div>  
+    </dl>
+  </div>
+</div>
 
 <div class="map" id='map' style='width: 100%; height: 600px;'>
   <%= render 'papuas/maps', papuas_results: @papuas, papuas_other: @papuas_other %>
 </div>
 
+<div class="py-4 flex items-center">
+  <%= link_to "Advanced Search", new_search_path(:inv => @segment.ipa), class: "items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-48" %>
+</div>
 
 <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
-    <div id="page_entries_info"><%= render 'papuas/page_entries_info' %></div>
+    <div id="page_entries_info">
+      <%= render 'papuas/page_entries_info', papuas: @papuas, papuas_other: @papuas_other  %>
+    </div>
     <!--div id="paginator"><%#= paginate @papuas, remote: true %></div-->
 </div>
 
