--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -47,12 +47,12 @@
   </div>
 
 
-  <!-- <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
+  <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
     <div id="page_entries_info">
-      <%#= render 'page_entries_info', papuas: @search.papuas, papuas_other: @search.papuas_other %>
+      <a id="anchor_page_entries_info"><%= render 'page_entries_info', papuas: @papuas, papuas_other: @papuas_other %></a>
     </div>
     <%#= render 'shared/searchbar' %>
-  </div> -->
+  </div>
 
   <div class="py-4 flex items-center justify-between">
     <div class="flex">
@@ -72,6 +72,11 @@
           </span>
         </a>
       <% end %> 
+    </div>
+
+    <div class="flex">
+      <%= submit_tag "START!", class: "items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-24" %>
+      <%= link_to "Reset", papuas_path(anchor: "anchor_page_entries_info"), class: "ml-3 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-24" %>
     </div>
 
     <div class="">
