--- a/app/views/segments/show.html.erb
+++ b/app/views/segments/show.html.erb
@@ -1,3 +1,4 @@
+<%= form_tag segment_path, :method => 'get', :id => "segment_search" do %>
 <p id="notice"><%= notice %></p>
 <div class="bg-white shadow overflow-hidden sm:rounded-lg mt-5 mb-5">
   <div class="lg:flex lg:items-center lg:justify-between">
@@ -74,6 +75,8 @@
 
 <div class="py-4 flex items-center">
   <%= link_to "Advanced Search", new_search_path(:inv => @segment.ipa), class: "items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-48" %>
+  <%= submit_tag "START!", class: "ml-3 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-24" %>
+  <%= link_to "Reset", segment_path(@segment), class: "ml-3 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-24" %>
 </div>
 
 <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
@@ -95,3 +98,4 @@
   <%= render 'papuas/papuas_rest', papuas: @papuas_other %>
 </div>
 
+<% end %>
