--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,6 +1,13 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (October 28th, 2021):</p>
+		<ul class="list-inside list-disc">
+			<li>New feature: Added back original simple search function with reset button.</li>
+			<li>New feature: Segment page supports simple search function.</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (October 27th, 2021):</p>
 		<ul class="list-inside list-disc">
 			<li>New feature: Advanced search function at Papunesias' and Segments' show page.</li>
